name:                qong-server
version:             0.1.0.0
synopsis:            Qong-Server
description:         A server that enables communication between qong-client instances for multi-player games
homepage:            https://github.com/githubuser/qong-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable qong-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5.0, websockets, stm, text, aeson, time, aeson-pretty
